minikube-with-istio/kubernetes-manifests/gateway/rules.yml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
#  namespace: "istio-system"
spec:
  mtls:
    mode: DISABLE
#---
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: allow-all
#spec:
#  action: ALLOW
#  # This matches everything.
#  rules:
#    - {}
