minikube-with-istio/kubernetes-manifests/gateway/routes.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: estore
spec:
  hosts:
    - "*"
  gateways:
    - gateway # <---- bind to gateway
  http:
    - match:
      - uri:
          prefix: /account
      route:
        - destination:
            host: account
            port:
              number: 8081
